Opened 16 years ago

Closed 15 years ago

#2497 closed bug (fixed)

[AboutSystem] right textview is not selectable (easy)

Reported by: diver Owned by: zooey
Priority: normal Milestone: R1
Component: Applications Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

AboutSystem right textview is not selectable. It should either be selectable or ibeam cursor should be removed to not confuse end user.

Change History (7)

comment:1 by diver, 16 years ago

Summary: [AboutSystem] right textview is not selectable[AboutSystem] right textview is not selectable (easy)

comment:2 by jackburton, 16 years ago

Actually the code already sets the BTextView to be selectable. The fact that it doesn't work could be the real bug :)

in reply to:  2 comment:3 by jackburton, 16 years ago

Replying to jackburton:

Actually the code already sets the BTextView to be selectable. The fact that it doesn't work could be the real bug :)

And now I see why: The classed used (HyperTextView) eats all the mouse events.

comment:4 by korli, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev29018

comment:5 by diver, 15 years ago

Resolution: fixed
Status: closedreopened

Seems like recent changes broke it again, reopening. Tested in hrev30793

comment:6 by zooey, 15 years ago

Owner: changed from axeld to zooey
Status: reopenednew

comment:7 by zooey, 15 years ago

Resolution: fixed
Status: newclosed

Fixed again in hrev30796. Ingo's recent changes removed the invocation of MakeSelectable(true), but the credits view was explicitly made non-selectable upon creation - why, I don't know. Now the credits view falls back to the default, which is to be selectable.

Note: See TracTickets for help on using tickets.