* calls BTextView hooks, this allows to select text (see bug #2497)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29018 a95241bf-73f2-0310-859d-f6bbb57e9c96